fixed the spacing with the explanation and the size/weight buttons

--- a/style_knapsack.css
+++ b/style_knapsack.css
@@ -89,7 +89,7 @@ p {
 }
 
 #explanation {
-	position: absolute;
+/*	position: absolute;*/
 	right: 10px;
 }
 
